# rpack

./: .gitignore  .rust-analyzer.toml  Cargo.toml
src/: curse.rs  main.rs  mcinstance.rs  modinfo.rs  modjars.rs
